fixed service details truncation

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -14,5 +14,5 @@
     line-height: 1.5;           
     margin-bottom: 1rem;    
 
-    min-height: 4.5em; 
+    min-height: 7.5em; 
 }
